tests/invalid_nodepend/bad_foreign_proc.err_exp
bad_foreign_proc.m:017: Error: a [38;5;87m`:- pragma foreign_proc' declaration[39;49m must have
bad_foreign_proc.m:017:   [38;5;203mexactly four arguments.[39;49m
bad_foreign_proc.m:021: Error: a [38;5;87m`:- pragma foreign_proc' declaration[39;49m must have
bad_foreign_proc.m:021:   [38;5;203mexactly four arguments.[39;49m
bad_foreign_proc.m:030: In the first argument of `:- pragma foreign_proc'
bad_foreign_proc.m:030:   declaration:
bad_foreign_proc.m:030:   error: expected the [38;5;40mname of a foreign language,[39;49m got
bad_foreign_proc.m:030:   [38;5;203m`"InvalidLanuage"'.[39;49m
bad_foreign_proc.m:030:   The valid languages are [38;5;40mc,[39;49m [38;5;40mC,[39;49m [38;5;40mcsharp,[39;49m [38;5;40mC#,[39;49m [38;5;40mjava[39;49m and
bad_foreign_proc.m:030:   [38;5;40mJava.[39;49m
bad_foreign_proc.m:039: In the second argument of `:- pragma foreign_proc'
bad_foreign_proc.m:039:   declaration:
bad_foreign_proc.m:039:   error: expected a [38;5;40msymbol name,[39;49m got [38;5;203m`"foo"'.[39;49m
bad_foreign_proc.m:043: In the third argument of `:- pragma foreign_proc'
bad_foreign_proc.m:043:   declaration:
bad_foreign_proc.m:043:   error: expected an [38;5;40mattribute list,[39;49m got
bad_foreign_proc.m:043:   [38;5;203m`"promise_pure"'.[39;49m
bad_foreign_proc.m:053: In the third argument of `:- pragma foreign_proc'
bad_foreign_proc.m:053:   declaration:
bad_foreign_proc.m:053:   error: [38;5;203mconflicting attributes[39;49m in attribute list.
bad_foreign_proc.m:060: In the fourth argument of `:- pragma foreign_proc'
bad_foreign_proc.m:060:   declaration:
bad_foreign_proc.m:060:   error: expected a [38;5;40mstring containing foreign code,[39;49m got
bad_foreign_proc.m:060:   [38;5;203m`5555'.[39;49m
bad_foreign_proc.m:065: In the first argument of `:- pragma foreign_proc'
bad_foreign_proc.m:065:   declaration:
bad_foreign_proc.m:065:   error: expected the [38;5;40mname of a foreign language,[39;49m got
bad_foreign_proc.m:065:   [38;5;203m`"InvalidLanguage"'.[39;49m
bad_foreign_proc.m:065:   The valid languages are [38;5;40mc,[39;49m [38;5;40mC,[39;49m [38;5;40mcsharp,[39;49m [38;5;40mC#,[39;49m [38;5;40mjava[39;49m and
bad_foreign_proc.m:065:   [38;5;40mJava.[39;49m
bad_foreign_proc.m:066: In the second argument of `:- pragma foreign_proc'
bad_foreign_proc.m:066:   declaration:
bad_foreign_proc.m:066:   error: expected a [38;5;40msymbol name,[39;49m got [38;5;203m`"foo"'.[39;49m
bad_foreign_proc.m:067: In the third argument of `:- pragma foreign_proc'
bad_foreign_proc.m:067:   declaration:
bad_foreign_proc.m:067:   error: expected an [38;5;40mattribute list,[39;49m got
bad_foreign_proc.m:067:   [38;5;203m`"promise_pure"'.[39;49m
bad_foreign_proc.m:068: In the fourth argument of `:- pragma foreign_proc'
bad_foreign_proc.m:068:   declaration:
bad_foreign_proc.m:068:   error: expected a [38;5;40mstring containing foreign code,[39;49m got
bad_foreign_proc.m:068:   [38;5;203m`6666'.[39;49m
bad_foreign_proc.m:073: In the first argument of `:- pragma foreign_proc'
bad_foreign_proc.m:073:   declaration:
bad_foreign_proc.m:073:   error: expected the [38;5;40mname of a foreign language,[39;49m got
bad_foreign_proc.m:073:   [38;5;203m`"Erlang"'.[39;49m
bad_foreign_proc.m:073:   The valid languages are [38;5;40mc,[39;49m [38;5;40mC,[39;49m [38;5;40mcsharp,[39;49m [38;5;40mC#,[39;49m [38;5;40mjava[39;49m and
bad_foreign_proc.m:073:   [38;5;40mJava.[39;49m
